<resources>
    <string name="app_name">MinhaProva</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="ok">OK</string>
    <string name="cancelar">cancelar</string>
    <string name="AteProxima">Fica para a proxima!</string>
    <string name="name">Name:</string>
    <string name="welcome">Bem-Vindo</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar2">Cancelar</string>
    <string name="NomedoLivro">Nome do Livro</string>
    <string name="NomedoAutor">Nome do Autor</string>
    <string name="Ano">Ano</string>
    <string name="Nota">Nota</string>
    <string name="proximo">Proximo</string>
    <string name="anterior">Anterior</string>
    <string name="ano2">TextView</string>
    <string name="autor2">TextView</string>
    <string name="titulo">TextView</string>
    <string name="nota2">TextView</string>
    <string name="textview1">Aluna</string>
    <string name="textview2">Merciana</string>
</resources>